Fixed table on mobile, updated menu positioning

--- a/menu-styles.css
+++ b/menu-styles.css
@@ -2,26 +2,28 @@
     height: 100vh; /* Expand to full height when open */
   }
 
-  #side-menu {
+#side-menu {
     position: fixed;
-    top: 55px;
+    top: 50px;
     left: -250px; /* Set initial position off-screen */
-    width: 250px;
-    height: 100vh;
+    width: 225px;
+    height: 20px;
     background-color: #150552;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
     z-index: 1;
     transition: 0.3s;
     overflow-x: hidden;
+    border-radius: 20px; /* Make it circular */
 }
 
 #main {
     transition: 0.3s;
 }
 
-#side-menu h3, .menu-group h3 {
+.menu-group{
+    border: 5px solid #150552;
     color: #150552;
-    padding: 10px;
+    padding: 5px;
     margin-bottom: 0;
     background-color: #ffffff;
 }
@@ -32,7 +34,7 @@
 
 #side-menu a {
     color: #ffffff;
-    padding: 10px;
+    /* padding: 10px; */
 }
 
 #side-menu label {
@@ -50,8 +52,8 @@
 
 #open-menu-btn {
     position: fixed;
-    top: 10px;
-    left: 10px;
+    top: 50px;
+    left: 20px;
     width: 40px; /* Adjust as needed */
     height: 40px; /* Adjust as needed */
     background-color: #150552;
@@ -60,4 +62,5 @@
     text-align: center;
     line-height: 40px; /* Vertically center the text */
     cursor: pointer;
+    z-index: 2;
   }
